--- a/Tekst_pracy/rozdzialy/rozdzial2.tex
+++ b/Tekst_pracy/rozdzialy/rozdzial2.tex
@@ -1,4 +1,4 @@
-\documentclass[test.tex]{subfiles}
+\documentclass[../main.tex]{subfiles}
 \begin{document}
 
 To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
@@ -25,25 +25,4 @@ Lorem ipsum tralkala.
 
 \end{document}
 
-To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. 
-To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala.  
-
-
-
-To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. 
-
-
-
-To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. 
-To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala.  
+ 
