--- a/Tekst_pracy/rozdzialy/rozdzial1.tex
+++ b/Tekst_pracy/rozdzialy/rozdzial1.tex
@@ -1,27 +1,7 @@
-\documentclass[test.tex]{subfiles}
+\documentclass[../main.tex]{subfiles}
 \begin{document}
 
-To jest teks rozdziału pierwszego \cite{Nowak} . Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. 
-
-
-
-To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. 
-To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala.  
-
-\newpage
-\begin{figure}[h]
-\centering
-\includegraphics[width=1\textwidth]{./obrazy/R1/schemat_v01.jpg}
-\caption{Wstępny schemat}
-\label{image-myimage}
-\end{figure}
+\section{Historia poduszkowców}
 
 Teraz pojawi się wzór!
 $$1+2=3$$
@@ -32,5 +12,11 @@ A teraz numerowany wzór:
 \end{equation}
 Ułamki:$$\frac{A^C}{V_g}$$
 
+\section{Teoria ruchu poduszkowca}
+
+\subsection{Ciąg pionowy}
+Musi być.
+\subsection{Napęd}
+Też musi być.
 
 \end{document}
