added titlepage in text scheme

--- a/Tekst_pracy/main/bibliografia.bib
+++ b/Tekst_pracy/main/bibliografia.bib
@@ -3,3 +3,9 @@ Author = {R. Nowak and K. Smith},
 Title = {Wpływ miesiączkowania pingwinów na kurs akcji},
 Pages = {19},
 Year = {2001} }
+
+@article{Kowalski,
+Author = {R. Buda and K. Smith},
+Title = {Lans i bans},
+Pages = {1966},
+Year = {9001} }
