--- a/Tekst_pracy/rozdzialy/rozdzial2.tex
+++ b/Tekst_pracy/rozdzialy/rozdzial2.tex
@@ -1,10 +1,10 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../main/main.tex]{subfiles}
 \begin{document}
 
-To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
+To jest teks rozdziału pierwszego\cite{Nowak}. Piszę w nim o dupie maryni.
 Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
 Lorem ipsum tralkala. To jest teks rozdziału pierwszego. Piszę w nim o dupie maryni.
-Lorem ipsum tralkala. 
+Lorem ipsum tralkala\cite{Kowalski}. 
 
 
 
