--- a/Tekst_pracy/rozdzialy/rozdzial3.tex
+++ b/Tekst_pracy/rozdzialy/rozdzial3.tex
@@ -1,4 +1,4 @@
-\documentclass[../main.tex]{subfiles}
+\documentclass[../main/main.tex]{subfiles}
 \begin{document}
 
 \section{Schemat konstrukcji mechanicznej}
@@ -10,7 +10,7 @@ Poniżej zamieszczono schemat połączeń.
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=1\textwidth]{./obrazy/schemat_aktualny.png}
+\includegraphics[width=1\textwidth]{../obrazy/schemat_aktualny.png}
 \caption{Wstępny schemat}
 \label{schemat_ogólny}
 \end{figure}
