added plan for thesis text

--- a/Tekst_pracy/main/bibliografia.bib
+++ b/Tekst_pracy/main/bibliografia.bib
@@ -9,3 +9,17 @@ Author = {R. Buda and K. Smith},
 Title = {Lans i bans},
 Pages = {1966},
 Year = {9001} }
+
+@book{shu,
+place={Mill Valley, CA},
+title={The physics of astrophysics}, 
+publisher={University Science Books}, 
+author={Shu, Frank H.}, 
+year={1992}}
+
+@Book{elo,
+author = {Kimono},
+title = {Teraz albo nigdy},
+publisher = {Ja},
+year = {2019},
+}
